--- a/index.html
+++ b/index.html
@@ -60,7 +60,20 @@
           <img src="assets/search.jpg" alt="search" height="36px"   width="48px" class="m-4">
           <img src="assets/cart.png" alt="cart"  height="36px"   width="48px" >
           <a class="btn m-4">Log In</a>
-          <a class="btn bg-green-500 m-4">Register</a>
+          <a class="btn bg-green-500 m-4 text-white">Register</a>
+        </div>
+      </div>
+      <!-- Banner Started -->
+      <div class="hero bg-base-200 min-h-screen bg-[#EFEBE3]">
+        <div class="hero-content text-center">
+          <div class="max-w-md">
+            <h1 class="text-5xl font-bold">Freshness You Can <br>
+                Count On, Prices You’ll Love!</h1>
+            <p class="py-6">
+                Shop your daily essentials at unbeatable prices. From fresh produce to pantry staples, we’ve got you covered every day!
+            </p>
+           <img src="assets/hero-vegetables.png" alt="hero" height="1038px" width="838px">
+          </div>
         </div>
       </div>
 </body>
