Navbar responsiveness done

--- a/index.html
+++ b/index.html
@@ -45,22 +45,24 @@
               <li><a>Item 3</a></li>
             </ul>
           </div>
+          
           <img src="assets/logo-header.png" alt="logo">
         </div>
         <div class="navbar-center hidden lg:flex">
           <ul class="menu menu-horizontal px-1">
-            <li><a>Product</a></li>
+            <li><a class="hidden sm:block">Product</a></li>
             <li>
-                <li><a>Services</a></li>
+                <li><a class="hidden sm:block">Services</a></li>
             </li>
-            <li><a>Contact Us</a></li>
+            <li><a class="hidden sm:block">Contact Us</a></li>
           </ul>
         </div>
-        <div class="navbar-end">
-          <img src="assets/search.jpg" alt="search" height="36px"   width="48px" class="m-4">
-          <img src="assets/cart.png" alt="cart"  height="36px"   width="48px" >
-          <a class="btn m-4">Log In</a>
-          <a class="btn bg-green-500 m-4 text-white">Register</a>
+        <div class="navbar-end" >
+          <img src="assets/search.png" alt="search" class="hidden sm:block" height="36px"  width="48px" class="m-4" >
+          <img src="assets/cart.png" alt="cart" class="hidden sm:block" height="36px"   width="48px" >
+          <a class="btn m-4  hidden sm:block" >Log In</a>
+          <a class="btn bg-green-500 m-4 text-white hidden sm:block" >Register</a>
+          <img src="assets/hamberger.png" alt="hamberger" class="sm:hidden" height="30px" width="30px">
         </div>
       </div>
       <!-- Banner Started -->
