--- a/index.html
+++ b/index.html
@@ -35,13 +35,7 @@
               tabindex="0"
               class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
               <li><a>Item 1</a></li>
-              <li>
-                <a>Parent</a>
-                <ul class="p-2">
-                  <li><a>Submenu 1</a></li>
-                  <li><a>Submenu 2</a></li>
-                </ul>
-              </li>
+              
               <li><a>Item 3</a></li>
             </ul>
           </div>
@@ -252,6 +246,11 @@
             </div>          
         </div>    
          </div>
+         <!-- new section -->
+          <section class="bg-gray-200 p-10 mt-10">
+            <h2 class="text-green-500 text-2xl my-10 font-bold">Recent News</h2>
+            <p class="mb-10 text-yellow-500"> We have launched our 100th outlet in Shapla Chattar Rangpur. You can collect our all kinds of products in this outlet.</p>
+          </section>
 
 
          <!-- Arrival & Offers started -->
