animation added in banner section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="navbar-end" >
           <img src="assets/search.png" alt="search" class="hidden sm:block" height="36px"  width="48px" class="m-4" >
           <img src="assets/cart.png" alt="cart" class="hidden sm:block" height="36px"   width="48px" >
-          <a class="btn m-4  hidden sm:block text-center" >Log In</a>
+          <a class="btn m-4  hidden sm:block text-center " >Log In</a>
           <a class="btn bg-green-500 m-4 text-white hidden sm:block text-center" >Register</a>
           <img src="assets/hamberger.png" alt="hamberger" class="sm:hidden" height="30px" width="30px">
         </div>
@@ -68,7 +68,7 @@
             <p class="py-6">
                 Shop your daily essentials at unbeatable prices. From fresh produce to pantry staples, we’ve got you covered every day!
             </p>
-           <img src="assets/hero-vegetables.png" alt="hero" height="1038px" width="838px">
+           <img src="assets/hero-vegetables.png" alt="hero" height="1038px" width="838px" class="transition-transform duration-500 hover:scale-110">
           </div>
         </div> 
       </div>
