--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
       </div>
       <!-- Services section started -->
       <div class="mt-10 ml-40"><h3 class="text-green-500 text-2xl font-bold">Services</h3></div>
-      <section class="flex justify-center ml-10" hight="1320px" width="367px">
+      <section class="grid grid-cols-1 md:grid-cols-3 justify-center ml-10" hight="1320px" width="367px">
       
-        <div class="card bg-base-100 w-96 shadow-xl m-6 bg-[#EFEBE3]">
+        <div class="card bg-base-100 w-96 shadow-xl m-6 bg-[#EFEBE3] ">
           <figure class="px-10 pt-10">
             <img class="w-32 h-32 rounded-full bg-white p-1 shadow" alt="Circular Image"
               src="assets/service.png"
-              alt="Shoes"
+              alt="Services"
               class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center">
@@ -256,7 +256,7 @@
          <!-- Arrival & Offers started -->
           <section>
             <div><h2 class="text-green-500 text-2xl my-10 font-bold">Arrival & Offers</h2> </div>
-            <div class="flex">
+            <div class="flex grid grid-cols-1 md:grid-cols-2 gap-4">
               <div class="dawat flex flex-[2] justify-between bg-[#63B76D] rounded mr-20 p-10">
                 <div class="content">
                   <img src="assets/dawat-logo.png" alt="dawat-logo" class="h-40">
@@ -286,11 +286,11 @@
             </div>
           </section>
           <!-- News Section Started -->
-          <div class="card lg:card-side bg-[#EFEBE3] shadow-xl mt-20 -mb-25 z-10 w-220 ml-70 ">
+          <div class="card lg:card-side bg-[#EFEBE3] shadow-xl mt-20 -mb-25 z-10 w-220 mx-5 md: ml-70 ">
             <figure>
               <img
                 src="assets/vegetable-busket.png"
-                alt="busket"  />
+                alt="busket"/>
             </figure>
             <div class="card-body">
               <h2 class="card-title">Get Grocery News!</h2>
