--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <!-- Popular Products -->
        <section class="ml-20 mt-30">        
         <div><h2 class="text-green-500 text-2xl mb-10 font-bold">Popular Products</h2> </div>
-        <div class="flex">          
+        <div class="flex grid grid-cols-1 md:grid-cols-3 gap-4">          
             <div class="card bg-[#53DB3A] w-96 shadow-xl">
               <div class="card-body">
               <h2 class="card-title">30% off</h2>
@@ -128,7 +128,7 @@
             </div>   
           <div><img src="assets/vegetable-offer.png" alt="vegetable-offer" class="h-45 w-30 bottom-0 right-0 absolute"></div> 
           </div>  
-          <div class="grid grid-cols-3">
+          <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
             <div class=" bg-[#EFEBE3] flex h-30 w-65 justify-between p-10 rounded ml-5 mb-5">
               <div><img src="assets/onion.png" alt="onion" class="h-20 w-20 justify-center"></div>
               <div>
@@ -286,7 +286,7 @@
             </div>
           </section>
           <!-- News Section Started -->
-          <div class="card lg:card-side bg-[#EFEBE3] shadow-xl mt-20 -mb-25 z-10 w-220 mx-5 md: ml-70 ">
+          <div class="card lg:card-side bg-[#EFEBE3] shadow-xl mt-20 -mb-25 z-10 w-220  md: ml-70 ">
             <figure>
               <img
                 src="assets/vegetable-busket.png"
